<resources>
    <string name="app_name">Do I Need It</string>
    <string name="title_text">Do I Need It?</string>
    <string name="productText">What do you need today?</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="login_text">Login</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="product_title">*Product title</string>
    <string name="menu_title">Add Product</string>
    <string name="Signout">Sign Out</string>
    <string name="signout">Sign Out</string>
    <string name="no_product_hint">Nothing to show here. Start by clicking the + sign</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_owned">Item Owned</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_new_product">Add New Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="btn_add">Add</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user">Already an user?</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_LastName">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="owned">Owned</string>
    <string name="username_or_email">Username or email</string>
    <string name="sign_in">Sign In</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="new_user">New user?</string>
    <string name="create_an_account">Create an account</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="add_item">ADD ITEM</string>
    <string name="todo">TODO</string>
    <string name="manage_your_needs_now">Manage your needs now!</string>
    <string name="save">Save</string>
    <string name="price_in_gbp">*Price in GBP</string>
    <string name="textview">TextView</string>
    <string name="today">Today</string>
    <string name="Update">Update</string>
    <string name="date_created">Date created</string>

</resources>
