<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="#1E1E1E"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/reflection_tree" />

            <ProgressBar
                android:id="@+id/img_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="86dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal|center_vertical" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_product_price"
            android:textColor="#99FFFFFF"

            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textColor="#DEFFFFFF"

            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtPrice"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/owned_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="start|center_vertical"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/owned"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="#BB86FC"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/product_time_stamp"
            android:layout_width="78dp"
            android:layout_height="91dp"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textColor="#99FFFFFF"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>